--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     position:fixed;
     width:100%;
     height:100%;
-    background:url("imagem.png") center center no-repeat;
+    background:url("imagem.jpg") center center no-repeat;
     background-size:cover;
     z-index:-2;
 }
