--- a/style.css
+++ b/style.css
@@ -21,6 +21,17 @@ body {
   padding: 24px;
 }
 
+#app {
+  width: 100%;
+  max-width: 400px;
+  padding: 24px;
+  background: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(10px);
+  border-radius: 25px;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.15);
+}
+
+
 /* TELAS */
 .screen {
   display: none;
